--- a/style/style.css
+++ b/style/style.css
@@ -10,7 +10,82 @@ body{
 background-image: url(../assets/background001.webp);
 background-size: contain;
 }
+/*------------------------------ALERTA-------------------------------------*/
+.modal-alerta {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.531);
+  backdrop-filter: BLUR(5PX);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 9999;
+  animation: fadeIn 0.3s ease-in-out;
+}
+
+.contenido-alerta {
+  width: 250PX;
+  height: 300PX;
+  border-radius: 12px;
+  text-align: center;
+  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.3);
+  animation: slideDown 0.4s ease-out;
+}
+.michiconfundido{
+  width: 100%;
+  height: 200px;
+  background-image: url(../assets/ALERT.webp);
+  background-size: cover;
+}
+.contenido-alerta p,
+.contenido-alerta button{
+  color: black;
+  font-family: Helvetica;
+  font-weight: bold;
+}
+
+
+.modal-alerta button {
+  background-color: #ffffff1e;
+  color: rgb(0, 0, 0);
+  padding: 10px 20px;
+  border: 2PX SOLID rgba(255, 255, 255, 0.28);
+  border-radius: 8px;
+  cursor: pointer;
+  margin-top: 15px;
+  transition: background 0.3s ease;
+}
+
+.modal-alerta button:hover {
+  background-color: #ffffff;
+}
+
+.oculto {
+  display: none;
+}
+
+
+
+/* Animaciones */
+@keyframes fadeIn {
+  from {opacity: 0;}
+  to {opacity: 1;}
+}
+
+@keyframes slideDown {
+  from {transform: translateY(-20px);}
+  to {transform: translateY(0);}
+}
+/*-------------------------------------------------------------------*/
+
+
+/*----------------------------BANNER---------------------------------------*/
+
 .banner{
+  overflow: hidden;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -23,12 +98,81 @@ background-size: contain;
   background-position-x: center;
   transition: 1s ease;
 }
+.bannermichis{
+  width: 50%;
+  height: 100%;
+  position: absolute;
+  background-size: contain;
+  background-repeat: no-repeat;
+}
+.bannermichis:nth-child(1){
+  left: 0;
+  background-image: url(../assets/wallpapersMICHI001.webp);
+}
+.bannermichis:nth-child(2){
+  right: 0;
+  background-image: url(../assets/wallpapersMICHI002.webp);
+
+}
 .bannerlogo{
   width: 220px;
   height: 250px;
   background-image: url(../assets/logo001.webp);
   background-size: cover;
 }
+
+/*-------------------------------------------------------------------*/
+
+
+/*--------------------------------BOTON DESBLOQUEAR CARTA-----------------------------------*/
+
+.BOTONDESBLOQUEAR{
+background-color: rgba(255, 255, 255, 0.107);
+backdrop-filter: blur(5px);
+border: 3px solid rgba(255, 255, 255, 0.083);
+border-radius: 10px;
+  font-family:Helvetica;
+padding: 10px;
+margin: 0 auto;
+  z-index: 500;
+  top: 20px;
+position: sticky;
+  display: flex;
+  width: 300px;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+#codigoGlobal {
+  border: none;
+  color: rgb(255, 255, 255); 
+}
+#codigoGlobal::placeholder {
+  border: none;
+  color: rgba(255, 255, 255, 0.322); 
+  opacity: 1;
+}
+.BOTONDESBLOQUEAR input{
+  outline: none;
+  font-weight: lighter;
+  text-align: center;
+background-color: rgba(255, 255, 255, 0);
+border: none;
+}
+.BOTONDESBLOQUEAR button{
+  cursor: pointer;
+  height: 40px;
+font-size: 150%;
+border: none;
+background-color: rgba(255, 255, 255, 0);
+transition: 0.3s ease;
+
+}
+.BOTONDESBLOQUEAR button:hover{
+  transition: 0.3s ease;
+transform: scale(1.3);
+}
+/*-------------------------------------------------------------------*/
 
 .carta,
 .fondo-rainbow,
@@ -93,7 +237,7 @@ background-size: contain;
   
   .cartasgaleriacontainer{
     background-size: cover;
-    padding: 100px 170px;
+    padding: 60px 170px;
     gap: 30px;
     justify-content: center;
     align-items: center;
@@ -104,6 +248,7 @@ background-size: contain;
     flex-wrap: wrap;
   }
   .cartaejemplo{
+    cursor: pointer;
     color: rgb(149, 116, 154);
     filter: saturate(1.2) contrast(1.2);
     border-radius: 8px;
@@ -111,8 +256,19 @@ background-size: contain;
     width: 150px;
     height: 217px;
     border: none;
-  }
+    transition: 0.3s ease;
 
+  }
+  .cartaejemplo:hover{
+ animation: brillo 0.4s ease-in-out;
+  }
+@keyframes brillo{
+  0%{box-shadow: 0px 0px 0px 0px rgba(240,240,240,1);  }  
+  50%{box-shadow: 0px 0px 10px 5px rgb(242, 0, 255);     transform: scale(1.05); }  
+  100%{box-shadow: 0px 0px 0px 0px rgba(240,240,240,1);  }  
+
+
+}
   .carta-wrapper {
     position: relative;
     display: inline-block;
@@ -123,16 +279,9 @@ background-size: contain;
     left: 0;
     width: 100%;
     height: 100%;
-background-color: rgb(77, 69, 84);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 180%;
-    padding: 10%;
-    color: rgb(147, 147, 147);
-    cursor: pointer;
+background-color: rgb(64, 30, 75);
+border: 4px dashed #4a2264;
 border-radius: 5px;
-box-shadow: inset 0px 3px 8px 1px rgb(0, 0, 0);
   }
 .pantallaNegra{
   position: fixed;
@@ -163,7 +312,7 @@ background-color: black;
     align-items: center;
     display: none;
     position: fixed;
-    z-index: 600;
+    z-index: 999999;
     transform-style: preserve-3d;
   }
 
@@ -364,17 +513,21 @@ backface-visibility: hidden;
 }
 
 .fondonegro {
+  z-index: 999998;
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.7);
+  background-color: rgba(0, 0, 0, 0.467);
   backdrop-filter: blur(5px);
 }
 
   /*-----------------------------MEDIA--------------------------------*/
   @media only screen and (max-width: 900px){
+
+
+
 
     .cartasgaleriacontainer{
       padding: 50px;
@@ -386,6 +539,12 @@ backface-visibility: hidden;
   }
 
 @media only screen and (max-width: 500px){
+
+  .BOTONDESBLOQUEAR{
+    padding: 5px;
+      top: 89%;
+      width: 250px;
+    }
 
   .cartasgaleriacontainer{
     padding:100px 30px;
@@ -403,5 +562,9 @@ backface-visibility: hidden;
     width: 220px;
     height: 250px;
   }
+  .bannermichis{
+display: none;
+  }
+
   
-}
+  }
