--- a/style/style.css
+++ b/style/style.css
@@ -11,8 +11,7 @@ html, body{
   overflow-x: hidden;
 background-image: url(../assets/background001.webp);
 background-size: contain;
-scroll-behavior: smooth; /* Desplazamiento suave */
-touch-action: none
+scroll-behavior: smooth;
 
 }
 /*------------------------------ALERTA-------------------------------------*/
