--- a/style/style.css
+++ b/style/style.css
@@ -7,6 +7,10 @@ html {
   scroll-behavior: smooth; /* Desplazamiento suave */
 }
 body{
+  overscroll-behavior: none;
+  height: 100dvh;
+  margin: 0;
+  padding: 0;
 background-image: url(../assets/background001.webp);
 background-size: contain;
 }
