--- a/style/style.css
+++ b/style/style.css
@@ -13,6 +13,8 @@ html, body{
 background-image: url(../assets/background001.webp);
 background-size: contain;
 }
+
+
 /*------------------------------ALERTA-------------------------------------*/
 .modal-alerta {
   position: fixed;
@@ -131,6 +133,7 @@ background-size: contain;
 /*--------------------------------BOTON DESBLOQUEAR CARTA-----------------------------------*/
 
 .BOTONDESBLOQUEAR{
+  overscroll-behavior: none;
 background-color: rgba(255, 255, 255, 0.107);
 backdrop-filter: blur(5px);
 border: 3px solid rgba(255, 255, 255, 0.083);
