--- a/style/style.css
+++ b/style/style.css
@@ -1,8 +1,23 @@
 
 *{
   color: white;
-  font-family: "Covered By Your Grace";
+  /*font-family: "Covered By Your Grace";*/
 }
+
+* {
+  outline: none !important;
+  box-shadow: none !important;
+  -webkit-tap-highlight-color: transparent;
+}
+
+*:focus,
+*:active {
+  outline: none !important;
+  box-shadow: none !important;
+  -webkit-tap-highlight-color: transparent;
+}
+
+
 
 html, body{
   scroll-behavior: smooth; 
@@ -130,6 +145,23 @@ background-size: contain;
 }
 
 
+.bannermovil{
+  display: none;
+}
+.botongaleria{
+  position: absolute;
+  width: 100px;
+  height: 100px;
+  background-image: url(../assets/botongaleria.webp);
+    background-size: contain;
+  background-repeat: no-repeat;
+  bottom: 15%;
+}
+.botongaleria:focus{
+    outline: none;
+}
+
+
 /*-------------------------------------------------------------------*/
 
 
@@ -242,14 +274,11 @@ transform: scale(1.3);
 .carousel-container {
   width: 100%;
   height: auto;
-    display: flex;
-    flex-wrap: wrap;
+
   }
   
   .cartasgaleriacontainer{
-    background-size: cover;
-    padding: 60px 170px;
-    gap: 30px;
+    gap: 50px;
     justify-content: center;
     align-items: center;
     width: 100%;
@@ -257,6 +286,21 @@ transform: scale(1.3);
     display: flex;
     flex-wrap: wrap;
   }
+
+.contenedorcolores{
+  gap: 20px;
+  border: 2px solid rgba(146, 146, 146, 0.546);
+  border-radius: 10px;
+  flex-wrap: wrap;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: auto;
+  height: auto;
+  margin: 0px 50px;
+  padding:50PX;
+}
+
   .cartaejemplo{
     cursor: pointer;
     color: rgb(149, 116, 154);
@@ -270,15 +314,9 @@ transform: scale(1.3);
 
   }
   .cartaejemplo:hover{
- animation: brillo 0.4s ease-in-out;
+transform: scale(1.1);
   }
-@keyframes brillo{
-  0%{box-shadow: 0px 0px 0px 0px rgba(240,240,240,1);  }  
-  50%{box-shadow: 0px 0px 10px 5px rgb(242, 0, 255);     transform: scale(1.05); }  
-  100%{box-shadow: 0px 0px 0px 0px rgba(240,240,240,1);  }  
 
-
-}
   .carta-wrapper {
     position: relative;
     display: inline-block;
@@ -294,12 +332,10 @@ border-radius: 5px;
   }
 .overnormal{
   background-color: rgb(64, 30, 75);
-  border: 4px dashed #4a2264;
 
 }
 .overespecial{
-  background-color: rgb(91, 89, 20);
-  border: 4px dashed #ffffff55;
+  background-color: rgb(117, 90, 2);
 
 }
 
@@ -351,8 +387,6 @@ overflow: hidden;
 .tarjeta {
   z-index: 10;
   position: absolute; 
-  width: 342px;
-  height: 500px;
   display: flex;
   perspective: 1000px;
   transform-style: preserve-3d;
@@ -546,43 +580,62 @@ backface-visibility: hidden;
   background-color: rgba(0, 0, 0, 0.467);
   backdrop-filter: blur(5px);
 }
+.botoncerrar{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 50px;
+  height: 50px;
+  font-size: 150%;
+   margin:10% 0PX;
+bottom: 0;
+transform: translateX(-50%);
+left: 50%;
+     position: absolute;
+      pointer-events: none;
+       border-radius: 50%; 
+       border: 1px solid white;
+       background-color: rgba(255, 255, 255, 0.214);
+}
+
 .separacion{
   position: relative;
   width: 100%;
   height: 15%;
-  background-color: brown;
 }
   /*-----------------------------MEDIA--------------------------------*/
   @media only screen and (max-width: 900px){
 
-
-
-
+    .cartaejemplo:hover{
+      transform: none;
+        }
+      
     .cartasgaleriacontainer{
-transform: translateY(-15%);
-      padding: 50px;
-      gap: 15px;
+transform: translateY(-10%);
       width: 100%;
       height: 75vh;
 overflow: scroll;
-mask-image: linear-gradient(to bottom, transparent, black 20%, black 90%, transparent);
+mask-image: linear-gradient(to bottom, transparent, black 20%, black 80%, transparent);
     }
 
 
+  .contenedorcolores{
+    border-radius: 10px;
+    padding:50px 0PX;
+    gap: 15px;
   }
-
-@media only screen and (max-width: 500px){
-
   .BOTONDESBLOQUEAR{
     padding: 5px;
       top: 90%;
       width: 250px;
     }
+    }
 
-  .cartasgaleriacontainer{
-    padding:100px 0px;
-    gap: 15px;
-  }
+@media only screen and (max-width: 500px){
+
+
+
+
   .cartaejemplo{
     border-radius: 5px;
     background-size: cover;
@@ -590,11 +643,50 @@ mask-image: linear-gradient(to bottom, transparent, black 20%, black 90%, transp
     height: 117px;
   }
 
+  .banner{
+    display: none;
+  }
   .bannerlogo{
-    transform: translateY(-60px);
+    background-position: center;
     width: 220px;
     height: 250px;
   }
+  .bannermichis{
+display: none;
+  }
+
+.bannermovil{
+  position: relative;
+  display: flex;
+    width: 100%;
+  height: 100vh;
+  justify-content: center;
+  align-items: center;
+  background-image: url(../assets/wallpapersmovil.webp);
+  background-size: cover;
+  background-position: center;
+}
+
+  
+  }
+
+  @media only screen and (max-width: 360px){
+
+
+  .contenedorcolores{
+    border-radius: 10px;
+    padding:30px 0PX;
+    gap: 10px;
+  }
+
+  .cartaejemplo{
+    border-radius: 5px;
+    background-size: cover;
+    width: 70px;
+    height: 103px;
+  }
+
+
   .bannermichis{
 display: none;
   }
