--- a/style/style.css
+++ b/style/style.css
@@ -2,11 +2,15 @@
 *{
   color: white;
   /*font-family: "Covered By Your Grace";*/
-    -webkit-tap-highlight-color: transparent;
 
 }
 
-
+*:focus,
+*:active {
+  outline: none !important;
+  box-shadow: none !important;
+  -webkit-tap-highlight-color: transparent;
+}
 
 
 
