--- a/style/style.css
+++ b/style/style.css
@@ -576,6 +576,7 @@ backface-visibility: hidden;
   backdrop-filter: blur(5px);
 }
 .botoncerrar{
+  font-family: Arial, Helvetica, sans-serif;
   display: flex;
   align-items: center;
   justify-content: center;
