--- a/style/style.css
+++ b/style/style.css
@@ -134,7 +134,6 @@ background-size: contain;
   position: absolute;
   width: 18%;
   height: 44%;
-  background-image: url(../assets/logo001.webp);
   background-size: contain;
   background-repeat: no-repeat;
 }
@@ -147,11 +146,27 @@ background-size: contain;
   position: absolute;
   width: 100px;
   height: 100px;
-  background-image: url(../assets/botongaleria.webp);
     background-size: contain;
   background-repeat: no-repeat;
   bottom: 15%;
+  animation: botongaleria 0.3s infinite;
 }
+
+@keyframes botongaleria{
+  0%{
+    background-image: url(../assets/boton01.webp);
+  }
+    30%{
+    background-image: url(../assets/boton02.webp);
+  }
+  60%{
+    background-image: url(../assets/boton03.webp);
+  }
+    100%{
+    background-image: url(../assets/boton04.webp);
+  }
+}
+
 .botongaleria:focus{
     outline: none;
 }
@@ -300,10 +315,10 @@ transform: scale(1.3);
     cursor: pointer;
     color: rgb(149, 116, 154);
     filter: saturate(1.2) contrast(1.2);
-    border-radius: 8px;
+    border-radius: 6px;
     background-size: cover;
-    width: 150px;
-    height: 217px;
+    width: 103px;
+    height: 150px;
     border: none;
     transition: 0.3s ease;
 
@@ -329,6 +344,12 @@ border-radius: 5px;
   background-color: rgb(64, 30, 75);
 
 }
+
+.overraro{
+  background-color: rgb(53, 22, 93);
+
+}
+
 .overespecial{
   background-color: rgb(117, 90, 2);
 
