--- a/style/style.css
+++ b/style/style.css
@@ -336,6 +336,7 @@ background: linear-gradient(90deg,rgba(0, 0, 0, 0.499) 0%, rgba(0, 0, 0, 0.289) 
   color: white;
   padding-top: 20%;
   transform: scale(2.2);
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 /* Animación de entrada (deslizamiento de izquierda a derecha) */
