--- a/style/style.css
+++ b/style/style.css
@@ -160,6 +160,8 @@ transform: translateX(0px);
   transform: rotate(-3DEG) translateX(20px);
     border-radius: 5px;
       box-shadow: 5px 0px 5px 0px rgba(0,0,0,0.54);
+      background-image: url(../assets/patron01.webp);
+      background-size: contain;
 }
 
 .opcionnavbar:nth-child(1){
@@ -923,6 +925,7 @@ left: 50%;
     filter: opacity(1);
 
   }
+
 
   .opcionnavbar{
   transform: rotate(-3DEG) translateX(-20px);
