--- a/style/style.css
+++ b/style/style.css
@@ -100,7 +100,9 @@ background-size: contain;
 
 
 /*---------------------------NAVBAR----------------------------------------*/
-
+:root {
+  --vh: 100vh;
+}
 .navoculto {
   position: fixed;
   z-index: 999999999999;
@@ -114,7 +116,7 @@ background-size: contain;
   justify-content: center;
   position: fixed;
   width: 300px;
-  height: 100%;
+  height: calc(var(--vh, 1vh) * 100);
 background-image: url(../assets/NAVBAR_BACKGROUND.webp);
 background-size: contain;
   left: -230px;
@@ -311,7 +313,7 @@ display: block;
   display: none;
 backdrop-filter: blur(5px);  
 width: 100%;
-  height: 100%;
+  height: calc(var(--vh, 1vh) * 100);
 }
 .botonmenudesplegable a{
   margin:20px 0px;
