--- a/style/style.css
+++ b/style/style.css
@@ -116,8 +116,8 @@ background-size: contain;
   justify-content: center;
   position: fixed;
   width: 300px;
-  height: calc(var(--vh, 1vh) * 100);
-background-image: url(../assets/NAVBAR_BACKGROUND.webp);
+  height: 100dvh;
+  background-image: url(../assets/NAVBAR_BACKGROUND.webp);
 background-size: contain;
   left: -230px;
 transition: 0.5s ease;
@@ -313,7 +313,7 @@ display: block;
   display: none;
 backdrop-filter: blur(5px);  
 width: 100%;
-  height: calc(var(--vh, 1vh) * 100);
+  height: 100dvh;
 }
 .botonmenudesplegable a{
   margin:20px 0px;
@@ -632,41 +632,54 @@ transform: scale(1.1);
     height: 100%;
 border-radius: 5px;
 background-size: contain;
+  background-image: url(../assets/cartas/BACK.webp);
   }
 .overnormal{
-  background-image: url(../assets/cartas/BACK.webp);
 filter: sepia(1) grayscale(1) brightness(0.8);
 }
 
 .overraro{
-  background-image: url(../assets/cartas/BACK.webp);
 filter: sepia(1) saturate(5) hue-rotate(240deg) brightness(0.7);
 
 }
 
 .overespecial{
-  background-image: url(../assets/cartas/BACK.webp);
 filter: sepia(1) saturate(5) hue-rotate(350deg) brightness(0.7);
 }
 
-.pantallaNegra{
+#pantallaNegra {
   position: fixed;
-  display: none;
-width: 100%;
-height: 100%;
-z-index: 999999;
-background-color: black;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background: rgb(0, 0, 0);
+  z-index: 9999;
+  display: none; /* por defecto oculto */
+}
+#pantallaNegra.activo {
+  display: flex; /* se activa el flex para centrar */
+  justify-content: center;
+  align-items: center;
+}
+.spinner {
+  border: 8px solid rgba(212, 0, 255, 0.429);
+  border-top: 8px solid rgb(255, 5, 226);
+  border-radius: 50%;
+  width: 60px;
+  height: 60px;
+  animation: spin 0.4s linear infinite;
 
 }
-.candado{
-  background-size: cover;
-  width: 200px;
-  height: 300px;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+
+/* Animación giro */
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
 }
+
+
+
 
   .carousel-item {
     background-size: cover;
