--- a/style/style.css
+++ b/style/style.css
@@ -505,7 +505,30 @@ filter: sepia(1) saturate(5) hue-rotate(350deg) brightness(0.7);
   100% { transform: rotate(360deg); }
 }
 
-
+.pantallacargando{
+    display: flex;
+    justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100dvh;
+  background-color: black;
+  position: fixed;
+  z-index: 999999999999999999;
+  pointer-events: none;
+  animation: cargando 2s ;
+filter: opacity(0);
+}
+@keyframes cargando{
+  0%{
+    filter: opacity(1);
+  }
+      99%{
+    filter: opacity(1);
+  }
+    100%{
+    filter: opacity(0);
+  }
+}
 
 
   .carousel-item {
