--- a/style/style.css
+++ b/style/style.css
@@ -757,6 +757,8 @@ backface-visibility: hidden;
 
 }
 
+
+
 .botoncerrar{
   font-family: Arial, Helvetica, sans-serif;
   display: flex;
@@ -774,6 +776,11 @@ left: 50%;
        border-radius: 50%; 
        border: 1px solid white;
        background-color: rgba(255, 255, 255, 0.214);
+}
+
+.contenedorbotoncerrar{
+display: none;
+
 }
 
 .separacion{
