--- a/style/style.css
+++ b/style/style.css
@@ -782,6 +782,9 @@ left: 50%;
 display: none;
 
 }
+.contenedor-instalar {
+display: none;
+}
 
 .separacion{
   position: relative;
@@ -821,12 +824,12 @@ display: none;
   border: none;
   opacity: 0;
   transform: scale(0);
-  animation: aparecerBoton 0.4s ease-out 2s forwards;
+  animation: aparecerBoton 0.4s ease-out 1.8s forwards;
 }
 
 .panel-desplegable {
-  background-color: white;
-  color: black;
+background: linear-gradient(0deg,rgba(117, 10, 125, 1) 0%, rgba(255, 0, 208, 1) 100%);
+  color: rgb(72, 255, 0);
   font-weight: bold;
   font-size: 16px;
   padding: 10px 20px;
@@ -836,7 +839,7 @@ display: none;
   white-space: nowrap;
   transform: scaleX(0);
   transform-origin: right;
- animation: desplegar 0.6s ease-out 2.4s forwards; 
+ animation: desplegar 0.6s ease-out 2.2s forwards; 
   opacity: 0;
 }
 
