--- a/style/style.css
+++ b/style/style.css
@@ -282,7 +282,7 @@ transform: scale(1.3);
     cursor: pointer;
     color: rgb(149, 116, 154);
     filter: saturate(1.2) contrast(1.2);
-    border-radius: 6px;
+border-radius: 3px;
     background-size: cover;
     width: 100%;
     height: 100%;
@@ -306,7 +306,7 @@ transform: scale(1.1);
     left: 0;
     width: 100%;
     height: 100%;
-border-radius: 5px;
+border-radius: 3px;
 background-size: contain;
   background-image: url(../assets/cartas/BACK.webp);
   }
@@ -397,6 +397,7 @@ filter: opacity(0);
 
 .carta{
 overflow: hidden;
+    filter: saturate(1.2) contrast(1.2);
 }
 
 
@@ -569,7 +570,11 @@ backface-visibility: hidden;
   box-shadow: 0px 0px 50px 50px rgb(255, 255, 255);
   z-index: 9;
 }
-
+.circle3 {
+  /*---------------PARA CARTAS NORMALES-------------------*/
+  box-shadow: 0px 0px 100px 100px rgba(255, 255, 255, 0.537);
+  z-index: 9;
+}
 .circle2 {
   /*---------------arriba de troquel chico-------------------*/
   box-shadow: 0px 0px 50px 50px rgba(255, 255, 255, 0.792);
@@ -608,30 +613,7 @@ backface-visibility: hidden;
 
 
 
-.botoncerrar{
-  font-family: Arial, Helvetica, sans-serif;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 50px;
-  height: 50px;
-  font-size: 150%;
-   margin:10% 0PX;
-bottom: 0;
-transform: translateX(-50%);
-left: 50%;
-     position: absolute;
-      pointer-events: none;
-       border-radius: 50%; 
-       border: 1px solid white;
-       background-color: rgba(255, 255, 255, 0.214);
-}
 
-
-.contenedorbotoncerrar{
-display: none;
-
-}
 .contenedor-instalar {
 display: none;
 }
@@ -641,6 +623,43 @@ display: none;
   width: 100%;
   height: 100px;
 }
+
+.expansion{
+  pointer-events: none;
+transform: translateY(50px);
+  width: 100%;
+  height: 150px;
+  position: relative;
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+
+  /*-----------------------------info-------------------------------*/
+
+.infocontainer{
+  position: relative;
+ width: 100%;
+ height: 100dvh;
+ display: flex;
+}
+.infobanner{
+  width: 100%;
+  height: 80%;
+  background-color: red;
+  position: absolute;
+}
+
+
+
+
+
+
+
+
+
+
   /*-----------------------------MEDIA--------------------------------*/
   @media only screen and (max-width: 600px){
 .boton-instalar,
@@ -690,21 +709,19 @@ backdrop-filter: blur(5px);
 border: 3px solid rgba(255, 255, 255, 0.083);
 border-radius: 10px;
   display: flex;
-  bottom: 0;
 transform: translateX(-50%);
 left: 50%;
   align-items: center;
   justify-content: space-around;
   padding: 10px;
 margin: 0 auto;
-  z-index: 500;
   bottom: 20px;
 
 }
 
 
 
-.botonatras:nth-child(1), .botonatras:nth-child(2), .botonatras:nth-child(3) {
+.botonatras:nth-child(1), .botonatras:nth-child(2), .botonatras:nth-child(3), .botonatrasexpansiones {
   font-family: Arial;
   display: flex;
   align-items: center;
@@ -715,7 +732,7 @@ margin: 0 auto;
   background-size: cover;
 }
 
-.botonatras:nth-child(2){
+.botonatras:nth-child(2), .botonatrasexpansiones{
   border-radius: 50%;
      border: 1px solid white;
        background-color: rgba(255, 255, 255, 0.214);
@@ -726,6 +743,82 @@ margin: 0 auto;
   font-size: 70%;
 }
 
+
+
+
+  /*-----------------------------EXPANSIONES--------------------------------*/
+#ventanaExpansiones {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.399);
+  backdrop-filter: blur(5px);
+  z-index: 9000;
+  justify-content: center;
+  align-items: center;
+}
+
+.ventana-emergente {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.categoriaexpansiones{
+  width: 80%;
+  height: 70%;
+border: 3px solid rgb(119, 119, 119);
+border-radius: 15px;
+}
+
+
+
+  /*-----------------------------carrusel expansiones-------------------------------*/
+
+.carruseldeexpansiones-container {
+  position: relative;
+  width: 100%;
+  max-width: 100%;
+  overflow: hidden;
+}
+
+.carruseldeexpansiones {
+  display: flex;
+  transition: transform 0.5s ease;
+  width: 100%;
+}
+
+.carruseldeexpansiones-item {
+  min-width: 100%;
+  height: 500px;
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.carruseldeexpansiones-btn {
+
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  background-color: rgba(255, 255, 255, 0);
+  border: none;
+  font-size: 6rem;
+  cursor: pointer;
+  z-index: 10;
+  padding: 10px;
+}
+
+.carruseldeexpansiones-btn.prev {
+  left: 10px;
+}
+
+.carruseldeexpansiones-btn.next {
+  right: 10px;
+}
   /*-----------------------------Menu app-------------------------------*/
 
 .menuapp{
