--- a/style/style.css
+++ b/style/style.css
@@ -395,9 +395,33 @@ filter: opacity(0);
     overscroll-behavior: none
   }
 
+  .Cnormal{
+background: radial-gradient(circle,rgba(255, 255, 255, 0) 60%, rgba(20, 176, 122, 0.465) 100%);
+    animation: entradacolores 1s ease-in-out;
+
+  }
+    .Craro{
+    background: radial-gradient(circle,rgba(255, 255, 255, 0) 60%, rgba(238, 0, 255, 0.473) 100%);
+    animation: entradacolores 1s ease-in-out;
+  }
+      .Clegendario{
+    background: radial-gradient(circle,rgba(255, 255, 255, 0) 60%, rgba(255, 217, 0, 0.516) 100%);
+        animation: entradacolores 1s ease-in-out;
+
+  }
+  @keyframes entradacolores{
+    0%{
+      filter: opacity(0) ;
+    }
+    100%{
+      filter: opacity(1) ;
+    }
+  }
+
 .carta{
 overflow: hidden;
     filter: saturate(1.2) contrast(1.2);
+
 }
 
 
@@ -570,11 +594,7 @@ backface-visibility: hidden;
   box-shadow: 0px 0px 50px 50px rgb(255, 255, 255);
   z-index: 9;
 }
-.circle3 {
-  /*---------------PARA CARTAS NORMALES-------------------*/
-  box-shadow: 0px 0px 100px 100px rgba(255, 255, 255, 0.537);
-  z-index: 9;
-}
+
 .circle2 {
   /*---------------arriba de troquel chico-------------------*/
   box-shadow: 0px 0px 50px 50px rgba(255, 255, 255, 0.792);
@@ -639,16 +659,15 @@ transform: translateY(50px);
   /*-----------------------------info-------------------------------*/
 
 .infocontainer{
-  position: relative;
+
  width: 100%;
  height: 100dvh;
  display: flex;
 }
 .infobanner{
   width: 100%;
-  height: 80%;
-  background-color: red;
-  position: absolute;
+  height: 70%;
+  background-color: rgba(255, 0, 0, 0.465);
 }
 
 
@@ -658,8 +677,9 @@ transform: translateY(50px);
 
 
 
-
-
+.contenedorbotoncerrar{
+  display: none;
+}
   /*-----------------------------MEDIA--------------------------------*/
   @media only screen and (max-width: 600px){
 .boton-instalar,
