--- a/style/style.css
+++ b/style/style.css
@@ -194,7 +194,20 @@ transition: 0.3s ease;
   transition: 0.3s ease;
 transform: scale(1.3);
 }
+
+
+
+/*----------------------------ESCANER QR---------------------------------------*/
+
+    #reader {
+      width: 300px;
+      margin-top: 20px;
+      display: none; /* Oculto al inicio */
+    }
+
+
 /*-------------------------------------------------------------------*/
+
 
 .carta,
 .fondo-rainbow,
