--- a/style/style.css
+++ b/style/style.css
@@ -199,12 +199,18 @@ transform: scale(1.3);
 
 /*----------------------------ESCANER QR---------------------------------------*/
 
-    #reader {
-      width: 300px;
-      margin-top: 20px;
-      display: none; /* Oculto al inicio */
-    }
+#reader {
+  width: 300px;
+  margin-top: 20px;
+  display: none; /* Oculto por defecto */
+  border: 2px solid #000;
+}
 
+#btn-abrir-escaner {
+  padding: 10px 20px;
+  font-size: 16px;
+  cursor: pointer;
+}
 
 /*-------------------------------------------------------------------*/
 
