--- a/style/style.css
+++ b/style/style.css
@@ -199,19 +199,29 @@ transform: scale(1.3);
 
 /*----------------------------ESCANER QR---------------------------------------*/
 
+/* Overlay para centrar el lector en pantalla */
+#reader-overlay {
+  display: none; /* Oculto al inicio */
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.8); /* Fondo oscuro con transparencia */
+  z-index: 9999;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+/* Contenedor del lector */
 #reader {
   width: 300px;
-  margin-top: 20px;
-  display: none; /* Oculto por defecto */
-  border: 2px solid #000;
+  height: 300px;
+  background: white;
+  border: 2px solid #fff;
+  border-radius: 10px;
 }
-
-#btn-abrir-escaner {
-  padding: 10px 20px;
-  font-size: 16px;
-  cursor: pointer;
-}
-
 /*-------------------------------------------------------------------*/
 
 
