--- a/style/style.css
+++ b/style/style.css
@@ -200,14 +200,12 @@ transform: scale(1.3);
 /*----------------------------ESCANER QR---------------------------------------*/
 
 #reader {
- position: fixed;
-  width: 300px;
+  width: 100%;
   margin-top: 20px;
   display: none; /* Oculto por defecto */
   border: 2px solid #000;
-  border-radius: 10px;
-   z-index: 9999999999;
 }
+
 
 
 /*-------------------------------------------------------------------*/
