--- a/style/style.css
+++ b/style/style.css
@@ -200,12 +200,11 @@ transform: scale(1.3);
 /*----------------------------ESCANER QR---------------------------------------*/
 
 #reader {
-  width: 100%;
+  width: 300px;
   margin-top: 20px;
   display: none; /* Oculto por defecto */
   border: 2px solid #000;
 }
-
 
 
 /*-------------------------------------------------------------------*/
