--- a/style/style.css
+++ b/style/style.css
@@ -200,10 +200,12 @@ transform: scale(1.3);
 /*----------------------------ESCANER QR---------------------------------------*/
 
 #reader {
-  width: 300px;
+  position: fixed;
+  width: 100%;
   margin-top: 20px;
   display: none; /* Oculto por defecto */
-  border: 2px solid #000;
+  border: 5px solid #cc00ff;
+  border-radius: 20px;
 }
 
 
