--- a/style/style.css
+++ b/style/style.css
@@ -200,14 +200,18 @@ transform: scale(1.3);
 /*----------------------------ESCANER QR---------------------------------------*/
 
 #reader {
-  position: fixed;
-  width: 100%;
-  margin-top: 20px;
-  display: none; /* Oculto por defecto */
-  border: 5px solid #cc00ff;
-  border-radius: 20px;
+  position: fixed !important;
+  top: 50px;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 300px;
+  height: 300px;
+  display: none;
+  background: white;
+  border: 10px solid #ff00ea;
+  z-index: 999999 !important;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
 }
-
 
 /*-------------------------------------------------------------------*/
 
