--- a/style/style.css
+++ b/style/style.css
@@ -201,16 +201,13 @@ transform: scale(1.3);
 
 #reader {
   position: fixed !important;
-  top: 50px;
-  left: 50%;
-  transform: translateX(-50%);
-  width: 300px;
-  height: 300px;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
   display: none;
-  background: white;
-  border: 10px solid #ff00ea;
+  border: 15px solid #ff00ea;
   z-index: 999999 !important;
-  box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
 }
 
 /*-------------------------------------------------------------------*/
