--- a/style/style.css
+++ b/style/style.css
@@ -198,18 +198,39 @@ transform: scale(1.3);
 
 
 /*----------------------------ESCANER QR---------------------------------------*/
-
-#reader {
-  position: fixed !important;
+#overlay {
+  position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
-  display: none;
-  border: 15px solid #ff00ea;
-  z-index: 999999 !important;
-  background-color: rgba(0, 255, 21, 0.538);
+  width: 100vw;
+  height: 100vh;
+  background: rgba(0,0,0,0.8);
+  z-index: 9999;
+  display: none; /* Oculto por defecto */
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  z-index: 99999999999;
 }
 
+
+#reader {
+  width: 300px;
+  height: 300px;
+  background: white;
+  border: 5px solid #ff00ea;
+  box-shadow: 0 0 20px rgba(0,0,0,0.6);
+}
+
+/* Botón de cerrar opcional */
+#cerrar-overlay {
+  margin-top: 20px;
+  padding: 10px;
+  background: #ff00ea;
+  color: white;
+  border: none;
+  cursor: pointer;
+}
 /*-------------------------------------------------------------------*/
 
 
