--- a/style/style.css
+++ b/style/style.css
@@ -204,31 +204,27 @@ transform: scale(1.3);
   left: 0;
   width: 100vw;
   height: 100vh;
-  background: rgba(0,0,0,0.8);
-  z-index: 9999;
+  background: rgba(0, 0, 0, 0.51);
+  backdrop-filter: blur(5px);
+  z-index: 999999999;
   display: none; /* Oculto por defecto */
-  justify-content: center;
   align-items: center;
   flex-direction: column;
-  z-index: 99999999999;
 }
 
 
 #reader {
+  height: auto;
   width: 300px;
-  height: 300px;
-  background: white;
-  border: 5px solid #ff00ea;
-  box-shadow: 0 0 20px rgba(0,0,0,0.6);
 }
 
-/* Botón de cerrar opcional */
 #cerrar-overlay {
   margin-top: 20px;
-  padding: 10px;
-  background: #ff00ea;
+  padding: 10px 20px;
+  background-color: #ff00ea;
   color: white;
   border: none;
+  font-weight: bold;
   cursor: pointer;
 }
 /*-------------------------------------------------------------------*/
