--- a/style/style.css
+++ b/style/style.css
@@ -215,18 +215,11 @@ transform: scale(1.3);
 
 #reader {
   height: auto;
-  width: 300px;
+  width: 80%;
+  top: 20%;
 }
 
-#cerrar-overlay {
-  margin-top: 20px;
-  padding: 10px 20px;
-  background-color: #ff00ea;
-  color: white;
-  border: none;
-  font-weight: bold;
-  cursor: pointer;
-}
+
 /*-------------------------------------------------------------------*/
 
 
